bindings/lisp/fae/graph.lisp

(in-package :cl-user)
(define-foreign-type graph-type () () (:actual-type :pointer))
(define-parse-method graph () (make-instance 'graph-type))
(defclass graph () ((graph-ptr :initarg :graph-ptr)))
(defmethod translate-to-foreign (x (type graph-type)) (slot-value x 'graph-ptr))
(defmethod translate-from-foreign (x (type graph-type)) (make-instance 'graph :graph-ptr x))
(defctype graph-node ptr)
(defctype graph-edge ptr)
(defctype graph-node-list list)
(defctype graph-edge-list list)
(defcfun (graph-empty "fae_graph_empty") graph)
(defcfun (graph-insert "fae_graph_insert") graph (a graph-node) (b graph))
(defcfun (graph-remove "fae_graph_remove") graph (a graph-node) (b graph))
(defcfun (graph-destroy "fae_graph_destroy") :void (a graph))
(defcfun (graph-connect "fae_graph_connect") graph (a graph-node) (b graph-node) (c graph-edge) (d graph))
(defcfun (graph-disconnect "fae_graph_disconnect") graph (a graph-node) (b graph-node) (c graph))
(defcfun (graph-to-dot "fae_graph_to_dot") string (a string) (b string) (c graph))